; Tests for the V2 runtime
; Legacy SPOC tests have been moved to *.spoc_legacy files

(executable
 (name test_native_runtime)
 (modules test_native_runtime)
 (libraries sarek sarek.stdlib sarek_core sarek_native unix)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name test_v2_comparison)
 (modules test_v2_comparison)
 (libraries sarek sarek.stdlib sarek_core sarek_cuda sarek_opencl unix)
 (preprocess
  (pps sarek_ppx))
 (flags
  (:standard -w -33 -ccopt -L/opt/cuda/lib64 -cclib -lnvrtc)))
